--- a/resources/test.html
+++ b/resources/test.html
@@ -13,7 +13,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="input-radio input-radio--innerlabel">
-                    <label>Ethan Allen</label>
+                    <label>Ethan asdfasdf Allen</label>
                     <div class="inner"></div>
                     <input type="radio" name="brand_option" value="2">
                 </div>
